# fastapi-test

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.py  environment.yml  pyproject.toml  run.py  task_out.txt
build_steps/ci_pipeline/: 3_run_pytest.sh
deployment/: docker-compose.yaml
fastapitest/: __init__.py  config.py  main.py  run.py
fastapitest/routers/: advanced.py  basics.py  security.py
fastapitest/views/: main.py  security.py  tasks.py
veryneatapp/: main.py  run.py
veryneatapp/api/: __init__.py
veryneatapp/api/dependencies/: core_dependencies.py
veryneatapp/api/endpoints/: basics.py  cust_exceptions.py  files.py  items.py  security.py  tasks.py  users.py
veryneatapp/api/schemas/: __init__.py  item.py  token.py  user.py
veryneatapp/core/: config.py
veryneatapp/tests/: conftest.py
veryneatapp/tests/api/: test_basics.py  test_items.py  test_users.py
veryneatapp/tests/api/api_v1/: test_items.py  test_users.py
veryneatapp/utils/: utils.py
veryneatapp/web/: web.py
veryneatapp/web/endpoints/: home.py
veryneatapp/web/templates/: index.html
