[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "fastapi-test"
version = "1.0.0"
description = "Dummy project to test for FastAPI framework"
authors = ["Guillaume Bournique <gbournique@gmail.com>"]
repository = "https://github.com/gbourniq/fastapi-test"
readme = "README.md"
keywords = ["fastapi"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.0"
jinja2 = "^2.11.2"
aiofiles = "^0.5.0"
uvicorn = "^0.11.8"
pydantic = {extras = ["email"], version = "^1.6.1"}
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.2"}

[tool.poetry.dev-dependencies]
autoflake = "^1.3"
black = "^19.3b0"
isort = "^4.3.4"
pre-commit = "^2.1"
pylint = "^2.3.1"
pytest = "^5.3"
pytest-cov = "^2.8"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"